Added functionality for single product details

--- a/frontend/html/productDetails.html
+++ b/frontend/html/productDetails.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce Website</title>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <title>Product Details</title>
+    <link rel="stylesheet" href="/frontend/css/common.css">
+    <link rel="stylesheet" href="/frontend/css/productDetails.css">
 </head>
 <body>
+
     <header>
         <h2>Dreamer's Shop</h2>
 
@@ -20,26 +21,15 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Home Slider Start -->
+    
+    <!-- Product Section Start -->
     <section>
-        <div id="home-slider"></div>
+        <div id="product-section"></div>
     </section>
-    <!-- Home Slider End -->
+    <!--  Product Section End -->
 
-    <!-- Products Start -->
-
-    <div class="product-section">
-        <h2>Our Latest Products</h2>
-
-        <div id="products-list"></div>
-    </div>
-
-    <!-- Products End -->
-
-
- <!-- Footer  Start -->
-    <footer>
+     <!-- Footer  Start -->
+     <footer>
         <div class="footer-div">
             <h3 class="footer-title">
                 About Us
@@ -78,9 +68,7 @@
         
     </footer>
  <!-- Footer End  -->
-
-<script type="module" src="../js/home.slider.js"></script>
-<script type="module" src="../js/shared/productCard.js"></script>
-<script type="module" src="../js/utilities.js"></script>
+    <script type="module" src="../js/utilities.js"></script>
+    <script type="module" src="/frontend/js/productDetails.js"></script>
 </body>
 </html>
