--- a/frontend/html/products.html
+++ b/frontend/html/products.html
@@ -72,5 +72,6 @@
  <!-- Footer End  -->
 
  <script type="module" src="../js/products.js"></script>
+ <script type="module" src="../js/utilities.js"></script>
 </body>
 </html>
