Fixed header and buy now links

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2>Dreamer's Shop</h2>
+        <a href="index.html"><h2>Dreamer's Shop</h2></a>
 
         <nav>
             <ul>
