Added functionality of placing order

--- a/frontend/html/orderForm.html
+++ b/frontend/html/orderForm.html
@@ -26,20 +26,20 @@
     <div class="formContainer">
         <h2 class="formTitle">Order Form</h2>
         <div class="formText">Please fill up the order form below to place your order. Our agents will call you soon for confirmation after your submission of this form.</div>
-        <form action="">
+        <form action="" id="order-form">
             <div class="inputField">
             <label for="name">Name</label> <br />
-            <input type="text" name="name" id="name" placeholder="Enter your name...">
+            <input type="text" name="name" placeholder="Enter your name...">
             </div>
 
             <div class="inputField">
             <label for="name">Email</label>
-            <input type="email" name="name" id="name" placeholder="Enter your email...">  
+            <input type="email" name="email" placeholder="Enter your email...">  
             </div>
 
             <div class="inputField">
             <label for="name">Phone Number</label>
-            <input type="tel" name="name" id="name" placeholder="Enter your phone number...">
+            <input type="tel" name="number" placeholder="Enter your phone number...">
             </div>
 
             <div class="inputField">
@@ -94,6 +94,6 @@
     
 </footer>
 <!-- Footer End  -->
-    <script src="/frontend/js/orderForm.js"></script>
+    <script type="module" src="/frontend/js/orderForm.js"></script>
 </body>
 </html>
