--- a/frontend/html/productDetails.html
+++ b/frontend/html/productDetails.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h2>Dreamer's Shop</h2>
+        <a href="index.html"><h2>Dreamer's Shop</h2></a>
 
         <nav>
             <ul>
